--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,5 +2,5 @@
 
 {% block body %}
     <h1>Works!</h1>
-    <p>It seems your application is working properly.</p>
+    <p>It seems your application is working properly!</p>
 {% endblock %}
